--- a/trunk/BDBO_REKAMMEDIS/nbproject/project.properties
+++ b/trunk/BDBO_REKAMMEDIS/nbproject/project.properties
@@ -26,13 +26,17 @@ dist.jar=${dist.dir}/BDBO_REKAMMEDIS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=lib\\absolutelayout\\AbsoluteLayout.jar
 file.reference.db4o-7.4.68.12069-java5.jar=lib/db4o-7.4.68.12069-java5.jar
+file.reference.jcalendar-1.3.2.jar=lib\\jcalendar-1.3.2.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.db4o-7.4.68.12069-java5.jar}
+    ${file.reference.db4o-7.4.68.12069-java5.jar}:\
+    ${file.reference.jcalendar-1.3.2.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
